--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "subdub",
-  "version": "0.0.3",
+  "version": "0.1",
   "private": true,
   "type": "module",
   "scripts": {
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@arcjet/node": "^1.0.0-beta.2",
+    "@upstash/workflow": "^0.2.12",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "~1.4.4",
+    "dayjs": "^1.11.13",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "express": "~4.16.1",
@@ -19,6 +21,7 @@
     "mongodb": "^6.13.1",
     "mongoose": "^8.10.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.10.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
