--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "express": "~4.16.1",
+    "express-rate-limit": "^7.5.0",
+    "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.1",
     "mongoose": "^8.10.1",
     "morgan": "~1.9.1",
     "nodemailer": "^6.10.0",
+    "rate-limiter-flexible": "^6.1.0",
+    "redis": "^4.7.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
